# safeclib

./: .appveyor.yml  .cirrus.yml  .clang-format  .drone.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Dockerfile-aarch64  Dockerfile-centos  Dockerfile-centos7  Dockerfile-debian  Dockerfile-fedora  Dockerfile-fedora-aarch64  Dockerfile-ubuntu-qemu  Doxyfile.in  Kbuild  Makefile.am  Makefile.kernel  README  README.md  README.rst  SECURITY.md  cmakeconfig.h.in  configure.ac  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7cdb440869b1bd6f37a494350d5ae583.html  dir_d4bcac790eb707bef397b9619be6c4bc.html  files.html  files.js  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  (+10 more)
build-aux/: autogen.sh  check-in-docker.sh  clang-format-all.sh  conf-make-check.sh  gcov-upd.pl  gcov.sh  git-version-gen  msys2.bat  smoke.sh  version-gen.sh
build-tools/: .gitignore  autogen.sh  gcov-macports.sh  gcov.sh  smoke.sh  version-gen.sh
doc/: footer.in  libc-overview.md  safe_c_lib_readme.txt
include/: .gitignore  safe_compile.h  safe_config.h.in  safe_lib.h  safe_lib_errno.h  safe_lib_errno.h.in  safe_mem_lib.h  safe_str_lib.h  safe_types.h  safe_types.h.in  (+2 more)
src/: .gitignore  Makefile.am  abort_handler_s.c  ignore_handler_s.c  mem_primitives_lib.c  memcmp16_s.c  memcmp_s.c  memcpy_s.c  memmove16_s.c  memmove32_s.c  memmove_s.c  memset16_s.c  memzero16_s.c  memzero_s.c  safe_lib_errno.h  safe_limits.h  safe_mem_constraint.c  safe_mem_constraint.h  safe_mem_lib.h  safe_str_constraint.h  safe_str_lib.h  safe_strerror_s.c  safe_types.h  safec.h.in  safeclib_private.h  strcasestr_s.c  strcmpfld_s.c  strcpy_s.c  strcpyfldout_s.c  strerror_s.h  strfirstchar_s.c  strfirstdiff_s.c  strfirstsame_s.c  strisalphanumeric_s.c  strisascii_s.c  strisdigit_s.c  strishex_s.c  strislowercase_s.c  strismixedcase_s.c  strispassword_s.c  (+14 more)
src/extmem/: memccpy_s.c  memchr_s.c  memcmp16_s.c  memcmp32_s.c  memcmp_s.c  memcpy16_s.c  memcpy32_s.c  memmove16_s.c  memmove32_s.c  memrchr_s.c  memset16_s.c  memset32_s.c  memzero16_s.c  memzero32_s.c  memzero_s.c  timingsafe_bcmp.c  timingsafe_memcmp.c
src/extstr/: stpcpy_s.c  stpncpy_s.c  strcasecmp_s.c  strcasestr_s.c  strchr_s.c  strcmp_s.c  strcmpfld_s.c  strcoll_s.c  strcpyfld_s.c  strcpyfldin_s.c  strcpyfldout_s.c  strcspn_s.c  strfirstchar_s.c  strfirstdiff_s.c  strfirstsame_s.c  strisalphanumeric_s.c  strisascii_s.c  strisdigit_s.c  strishex_s.c  strislowercase_s.c  strismixedcase_s.c  strispassword_s.c  strisuppercase_s.c  strlastchar_s.c  strlastdiff_s.c  strlastsame_s.c  strljustify_s.c  strnatcmp_s.c  strnset_s.c  strnterminate_s.c  strpbrk_s.c  strprefix_s.c  strrchr_s.c  strremovews_s.c  strset_s.c  strspn_s.c  strstr_s.c  strtolowercase_s.c  strtouppercase_s.c  strzero_s.c
src/extu8/: gen-u8gbreaks.pl  gen-u8scripts.pl  u8_private.h  u8cat_s.c  u8cpy_s.c  u8gbreaks.h  u8glen_s.c  u8icat_s.c  u8icpy_s.c  u8ncpy_s.c  u8nlen_s.c  u8norm_s.c  u8script.c  u8scripts.h  u8width_s.c  un8ifcan.h  un8ifcmb.h  un8ifcmp.h  un8ifcpt.h
src/extwchar/: composed.h  dec_rest.h  hangul.h  mark.h  towctrans.c  towfc_s.c  unifcan.h  unifcmb.h  unifcmp.h  unifcpt.h  unifexc.h  unw16ifcan.h  unw16ifcmb.h  unw16ifcmp.h  unw16ifcpt.h  unw16ifexc.h  unwfcpt.h  unwifcan.h  unwifcmb.h  unwifcmp.h  unwifcpt.h  unwifexc.h  wcscmp_s.c  wcscoll_s.c  wcsfc_s.c  wcsicmp_s.c  wcslwr_s.c  wcsnatcmp_s.c  wcsncmp_s.c  wcsnorm_s.c  wcsnset_s.c  wcsset_s.c  wcsstr.c  wcsstr_s.c  wcsupr_s.c  wmemcmp_s.c
src/io/: fopen_s.c  fprintf_s.c  freopen_s.c  fscanf_s.c  fwprintf_s.c  gets_s.c  printf_s.c  safec_file.h  safec_vfscanf_s.c  safec_vfwscanf_s.c  scanf_s.c  sscanf_s.c  tmpfile_s.c  tmpnam_s.c  vfprintf_s.c  vfscanf_s.c  vprintf_s.c  vscanf_s.c  vsscanf_s.c
src/mem/: mem_primitives_lib.c  mem_primitives_lib.h  memcpy_s.c  memmove_s.c  memset_s.c  safe_mem_constraint.c  safe_mem_constraint.h
src/misc/: bsearch_s.c  qsort_s.c
src/os/: asctime_s.c  ctime_s.c  getenv_s.c  gmtime_s.c  localtime_s.c
src/safeclib/: abort_handler_s.c  ignore_handler_s.c  mem_primitives_lib.c  mem_primitives_lib.h  memcmp16_s.c  memcmp32_s.c  memcmp_s.c  memcpy16_s.c  memcpy32_s.c  memcpy_s.c  memmove16_s.c  memmove32_s.c  memmove_s.c  memset16_s.c  memset32_s.c  memset_s.c  memzero16_s.c  memzero32_s.c  memzero_s.c  safe_lib_errno.h  safe_mem_constraint.c  safe_mem_constraint.h  safe_str_constraint.c  safe_str_constraint.h  safe_types.h  safeclib_private.h  snprintf_s.c  sprintf_s.c  strcasecmp_s.c  strcasestr_s.c  strcat_s.c  strcmp_s.c  strcmpfld_s.c  strcpy_s.c  strcpyfld_s.c  strcpyfldin_s.c  strcpyfldout_s.c  strcspn_s.c  strfirstchar_s.c  strfirstdiff_s.c  (+30 more)
src/slkm/: slkm_init.c
src/str/: safe_str_constraint.c  safe_str_constraint.h  snprintf_s.c  sprintf_s.c  strcat_s.c  strcpy_s.c  strerror_s.c  strerror_s.h  strerrorlen_s.c  strncat_s.c  strncpy_s.c  strnlen_s.c  strtok_s.c  vsnprintf_s.c  vsprintf_s.c
src/wchar/: fwprintf_s.c  fwscanf_s.c  mbsrtowcs_s.c  mbstowcs_s.c  snwprintf_s.c  swprintf_s.c  swscanf_s.c  vfwprintf_s.c  vfwscanf_s.c  vsnwprintf_s.c  vswprintf_s.c  vswscanf_s.c  vwprintf_s.c  vwscanf_s.c  wcrtomb_s.c  wcscat_s.c  wcscpy_s.c  wcsncat_s.c  wcsncpy_s.c  wcsnlen_s.c  wcsrtombs_s.c  wcstok_s.c  wcstombs_s.c  wctomb_s.c  wmemcpy_s.c  wmemmove_s.c  wprintf_s.c  wscanf_s.c
tests/: .gitignore  CMakeLists.txt  DerivedGeneralCategory.txt  Makefile.am  perf_memcpy32_s.c  perf_memcpy_s.c  perf_memset_s.c  perf_private.h  perf_strcpy_s.c  test_asctime_s.c  test_bsearch_s.c  test_ctime_s.c  test_expmem.h  test_fopen_s.c  test_fprintf_s.c  test_freopen_s.c  test_fscanf_s.c  test_fwprintf_s.c  test_fwscanf_s.c  test_getenv_s.c  test_gets_s.c  test_gmtime_s.c  test_localtime_s.c  test_mbsrtowcs_s.c  test_mbstowcs_s.c  test_memccpy_s.c  test_memchr_s.c  test_memcmp16_s.c  test_memcmp32_s.c  test_memcmp_s.c  test_memcpy16_s.c  test_memcpy32_s.c  test_memcpy_s.c  test_memmove16_s.c  test_memmove32_s.c  test_memmove_s.c  test_memrchr_s.c  test_memset16_s.c  test_memset32_s.c  test_memset_s.c  (+115 more)
(+7704 files in other folders)
